Closes #5; fix underline links in header nav on mobile

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -328,7 +328,7 @@ nav a[aria-current="page"] {
   header > nav a {
     border: none;
     padding: 0;
-    text-decoration: underline;
+    text-decoration: none;
     line-height: 1;
   }
 }
